added a logo and a few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title> Test Page </title>
+</head>
+<body>
 <h1> hey. im a big heading </h1>
-<p>hey im a paraphagh element</p>
+<p>im a <b>paragraph</b></p>
 <a href="https://google.com" target="_blank" title="lets go to google">click me im a link</a>
+<p> my name is : <br>
+ dizzlestacksmusic </p>
+<img src="img/black logo.jpg">
