--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
+	
+	<title>spider-man</title>
 	<!--how to add pic to website at top aka tab -->
 	<link rel="shortcut icon" href="img/tlogo.png">
 	<!-- -->
-
-
-	<meta charset="utf-8">
-	<title>spider-man</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/spider.css">
+	
 </head>
 <body>
+
 	<!-- header element -->
 
 <header>
 	<img src="img/spiderman.png">
-	<h1>spider-man</h1>
+	<h1>Spider Man</h1>
 </header>
 
 	<!-- main element -->
@@ -22,7 +27,7 @@
 		<h2>about spider-man</h2>
 		<p>tobey maguire is the best and only spiderman who really ever matters! just had to let it be known.</p>
 		<img src="img/only spider.jpg">
-		<p>spiderman doing something cool</p>
+		<p class="caption">(Spiderman doing something cool)</p>
 		<h2>facts about spiderman</h2>
 		<ol>
 			<li> he kills bad guys </li>
@@ -46,7 +51,7 @@
 
 	<!-- footer -->
 	<footer>
-		<p>this website was created as a test! &copy; <a href="dizzlestacks.com"></a>dizzlestacks</p>
+		<p>this website was created as a test! &copy;dizzlestacks</p>
 	</footer>
 
 </body>
