cleaned it up and made presentable

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	
 	
-	<title>spider-man</title>
+	<title>your friendly neiborhood spider-man</title>
 	<!--how to add pic to website at top aka tab -->
 	<link rel="shortcut icon" href="img/tlogo.png">
 	<!-- -->
@@ -25,9 +25,9 @@
 	<!-- main element -->
 	<main>
 		<h2>about spider-man</h2>
-		<p>tobey maguire is the best and only spiderman who really ever matters! just had to let it be known.</p>
-		<img src="img/only spider.jpg">
-		<p class="caption">(Spiderman doing something cool)</p>
+		<p>tobey maguire is the best and only spiderman who really ever mattered! i just had to let it be known.</p>
+		<img src="img/cool.jpg">
+		<p class="caption">spider-man web slinging</p>
 		<h2>facts about spiderman</h2>
 		<ol>
 			<li> he kills bad guys </li>
@@ -38,7 +38,7 @@
 		<!-- links to the op fight scenses -->
 		<h2>spider-mans opps</h2>
 		<p>all ops must die!!!;
-		click links to read more </p>
+		click links to see live action fights</p>
 		<ul>
 			<li><a target="_blank" href="https://www.youtube.com/watch?v=kFHujqmtKv4">doctor octopus</a></li>
 			<li><a target="_blank" href="https://www.youtube.com/watch?v=EcDVXeB_rY4">fight scene</a></li>
