about/test page & font cleanup on index

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 	<!--how to add pic to website at top aka tab -->
 	<link rel="shortcut icon" href="img/tlogo.png">
 	<!-- -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/spider.css">
+	<!-- fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap" rel="stylesheet">
 	
 </head>
 <body>
@@ -19,11 +20,15 @@
 
 <header>
 	<img src="img/spiderman.png">
-	<h1>Spider Man</h1>
+	<h1 class="tittle">Spider Man</h1>
 </header>
 
 	<!-- main element -->
 	<main>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100&family=Orbitron:wght@900&display=swap" rel="stylesheet">
+
 		<h2>about spider-man</h2>
 		<p>tobey maguire is the best and only spiderman who really ever mattered! i just had to let it be known.</p>
 		<img src="img/cool.jpg">
@@ -52,6 +57,7 @@
 	<!-- footer -->
 	<footer>
 		<p>this website was created as a test! &copy;dizzlestacks</p>
+		<p><a title="visit the about page" href="pages/about.html"> click here to read more </a>
 	</footer>
 
 </body>
