--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 	<title>your friendly neiborhood spider-man</title>
 	<!--how to add pic to website at top aka tab -->
-	<link rel="shortcut icon" href="img/tlogo.png">
+	<link rel="shortcut icon" href="img/2.jpg">
 	<!-- -->
 	<link rel="stylesheet" type="text/css" href="css/spider.css">
 	<!-- fonts -->
@@ -57,7 +57,7 @@
 	<!-- footer -->
 	<footer>
 		<p>this website was created as a test! &copy;dizzlestacks</p>
-		<p><a title="visit the about page" href="pages/about.html"> click here to read more </a>
+		<p><a title="CLICK ME" href="pages/about.html"> CLICK ME! </a>
 	</footer>
 
 </body>
