--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@
 
 <img src="../img/baby.gif">
 
-<p><a title="visit the about page" href="../index.html"> back </a>
+<p><a href="../index.html"> go back </a>
 
 
 
