ad sense (test)

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
 	<footer>
 		<p>this website was created as a test! &copy;dizzlestacks</p>
 		<p><a title="CLICK ME" href="pages/about.html"> CLICK ME! </a>
+			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1344150540989825"
+     crossorigin="anonymous"></script>
+<!-- github -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1344150540989825"
+     data-ad-slot="5654237737"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	</footer>
 
 </body>
