--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1344150540989825"
+     crossorigin="anonymous"></script>
 	</footer>
 
 </body>
